--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "date-fns": "^2.30.0",
     "jotai": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-calendars": "^1.1298.0",
     "react-native-gesture-handler": "^2.10.1",
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "^4.5.3",
